fix: wrong font imports

--- a/src/css/partials/_typography.css
+++ b/src/css/partials/_typography.css
@@ -1,36 +1,35 @@
+@import url('https://fonts.googleapis.com/css2?family=Lora:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 @font-face{
-  font-family:"lora";
+  font-family:"Lora";
   font-weight: 400;
-  src:url("https://fonts.googleapis.com/css2?family=Lora&display=swap");
 }
 
 @font-face{
-  font-family:"lora";
+  font-family:"Lora";
   font-weight: 500;
-  src:url("https://fonts.googleapis.com/css2?family=Lora:wght@500&display=swap");
 }
 
 @font-face{
-  font-family:"lora";
+  font-family:"Lora";
   font-weight: 600;
-  src:url("https://fonts.googleapis.com/css2?family=Lora:wght@600&display=swap");
 }
 
 @font-face {
-  font-family: "montserrat";
+  font-family: "Montserrat";
   font-weight: 300;
   font-style: italic;
-  src: url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,300&display=swap");
 }
 
 @font-face {
-  font-family: "montserrat";
+  font-family: "Montserrat";
   font-weight: 400;
-  src: url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+  font-style: normal;
 }
 
 @font-face {
-  font-family: "montserrat";
+  font-family: "Montserrat";
   font-weight: 700;
-  src: url("https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap");
+  font-style: normal;
 }
